fix: z-index

--- a/src/resources/lookup-single/lookup-single.css
+++ b/src/resources/lookup-single/lookup-single.css
@@ -86,6 +86,7 @@
 
   :host > .textinput {
     position: absolute;
+    z-index: 10;
     line-height: 2em;
     width: 100%;
     background: white;
